# 5_Klasse_POS

./: .envrc  .gitignore  .gitmodules  README.md  qt6
.direnv/: flake-profile-1-link
PA/: README.md
Practice/: README.md
Practice/01_LinkedList/: linkedlist.cpp  linkedlist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Practice/02_UPN-Calc/: 02_UPN-Calc.pro  mainwindow.ui  upncalc.cpp  upncalc.h
Practice/03_Calculator/: CMakeLists.txt
Practice/03_Calculator/exprtk/: exprtk.hpp
Practice/03_Calculator/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  calculation.cpp  calculation.h  main.cpp
Practice/04_XML_Explorer/: 04_XML_Explorer.pro  QTreeWidgetXmlItem.cpp  QTreeWidgetXmlItem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Practice/06_QT-FlightDB/: 06_QT-FlightDB.pro  flight.db  flight_create.sql  flightplan.cpp  flightplan.h  flightthingy.cpp  flightthingy.h  mainwindow.cpp  mainwindow.ui
Practice/07_FlugORM/: FlugORM.pro
Practice/08_Formel1-Statistik/: 08_Formel1_Statistik.pro  constructors.cpp  constructors.h  driver.cpp  driver.h  export.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  precompiled.h  races.cpp  races.h  results.cpp  results.h
Practice/build-01_LinkedList-Desktop-Debug/: 01_LinkedList  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Practice/build-02_UPN-Calc-Desktop-Debug/: .qmake.stash  02_UPN-Calc  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Practice/build-04_XML-Explorer-Desktop-Debug/: 04_XML-Explorer  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Practice/first_cpp_project/: x  (+1 more)
first_cpp_project/: main.cpp
(+104 files in other folders)
